--- a/labs/camelkocpserverlesseventing.adoc
+++ b/labs/camelkocpserverlesseventing.adoc
@@ -343,7 +343,7 @@ The output should look like :-
 
 [source]
 ----
-No resources found in sandbox_{{USER_ID}} namespace.
+No resources found in sandbox-{{USER_ID}} namespace.
 ----
 
 ==== Install a Kafka Broker using AMQ Streams
@@ -352,7 +352,7 @@ NOTE: AMQ Streams using an Operator to perform all of the administration tasks o
 
 Once the operators are installed, the CRDs become available for you to use through the developer view in the OpenShift console.
 
-In the OpenShift console, make sure you in developer view looking at your sandbox_{{USER_ID}} project.
+In the OpenShift console, make sure you in developer view looking at your sandbox-{{USER_ID}} project.
 
 This should look similar to the screenshot below 
 
@@ -417,7 +417,7 @@ apiVersion: kafka.strimzi.io/v1beta1
 kind: Kafka
 metadata:
   name: my-cluster
-  namespace: sandbox_{{USER_ID}}
+  namespace: sandbox-{{USER_ID}}
 spec:
   kafka:
     version: 2.4.0
@@ -513,7 +513,7 @@ apiVersion: eventing.knative.dev/v1alpha1
 kind: KnativeEventingKafka
 metadata:
   name: knative-eventing-kafka
-  namespace: sandbox_{{USER_ID}}
+  namespace: sandbox-{{USER_ID}}
 spec:
   bootstrapServers: 'replacewithyourbootstrapserver:9092'
   setAsDefaultChannelProvisioner: true
